# binrep

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Changelog.md  README.md  binrep.code-workspace  config.sane  justfile
binrep/: Cargo.toml
binrep-batch/: Cargo.toml
binrep-batch/src/: main.rs
binrep-core/: Cargo.toml  config-s3.sane  config.sane
binrep-core/src/: binrep.rs  config.rs  config_resolver.rs  exec.rs  extended_exec.rs  file_utils.rs  lib.rs  metadata.rs  path.rs  repository.rs  slack.rs
binrep-core/src/backend/: file_backend.rs  mod.rs  s3_backend.rs
binrep-core/src/crypto/: ed25519_signature.rs  hmac_signature.rs  mod.rs
binrep-core/src/progress/: indicatif.rs  interactive.rs  mod.rs  non_interactive.rs  noop.rs
binrep-core/tests/: config_ed25519_sign.sane  config_ed25519_verify.sane  ed25519_signing.rs  s3.rs
binrep/src/: main.rs
src/: binrep.rs  config.rs  config_resolver.rs  crypto.rs  exec.rs  extended_exec.rs  file_utils.rs  lib.rs  metadata.rs  path.rs  repository.rs  slack.rs
src/backend/: file_backend.rs  mod.rs  s3_backend.rs
src/crypto/: hmac_signature.rs  mod.rs
test/: test-file-backend-config.sane
tests/: s3.rs
