[package]
name = "binrep"
version = "0.2.0"
authors = ["Philippe GASSMANN <pgassmann@scoop.it>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde={ version = "1.0", features=["derive"] }
sane = "0.2"
structopt = "0.2"
failure = "0.1.5"
ring="0.14.6"
shellexpand = "1.0.0"
log="0.4"
semver={ version="0.9.0", features=["serde"]}
base64="0.10.1"
tempfile="3"
chrono="0.4"
rusoto_s3="0.39.0"
rusoto_core="0.39.0"
rusoto_credential = "0.39.0"
futures-fs = "0.0.5"
env_logger = "0.6.1"

[[bin]]
name="binrep"
path="src/bin/binrep.rs"

