[package]
name = "binrep-batch"
version = "0.13.0"
authors = ["Philippe GASSMANN <pgassmann@scoop.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrep-core={path="../binrep-core"}
serde={ version = "1.0", features=["derive"] }
sane = "0.2"
anyhow="1"
glob="0.3"
structopt = "0.3"
semver={ version="0.11", features=["serde"]}
log="0.4"
env_logger ="0.8"
hostname="*"
tempfile="3"
