[package]
name = "binrep-core"
version = "0.15.4"
authors = ["Philippe GASSMANN <pgassmann@scoop.it>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sane = "0.2"
anyhow = "1"
thiserror = "1"
ring = { version = "0.17", features = ["std"] }
log = "0.4"
shellexpand = "2.0"
semver = { version = "1.0", features = ["serde"] }
data-encoding = "2.5"
tempfile = "3"
chrono = "0.4"
rusoto_s3 = "0.48"
rusoto_core = "0.48"
rusoto_credential = "0.48"
fs2 = "0.4.3"
# statically link openssl to our binary so we can run on ubuntu:* even if build from a debian strech version
openssl = { version = "0.10", features = ["vendored"] }
slack-hook3 = "0.11"
crossbeam = "0.8"
tokio = { version = "1.5", features = [
    "time",
    "rt-multi-thread",
    "fs",
    "macros",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
futures = "0.3"
indicatif = "0.17"
atty = "0.2"
pin-project = "1.0"
async-trait = "0.1.50"
tokio-io-timeout = "1"
