[package]
name = "binrep"
version = "0.15.0"
authors = ["Philippe GASSMANN <pgassmann@scoop.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrep-core={path="../binrep-core"}
anyhow="1"
structopt = "0.3"
log="0.4"
env_logger ="0.9"
ring="0.16"
base64="0.13"
tokio={version="^1.5", features=["macros"]}